--- a/installer/resources/readme/readme.html
+++ b/installer/resources/readme/readme.html
@@ -20,8 +20,8 @@
 <ul class="links">
       <li class="tidylist"><b>Anonymous Chat</b><br>Start your IRC client (eg. chatzilla)
         and connect to the <a href="irc://127.0.0.1:6668/i2p">server</a> at <code>127.0.0.1 port 6668</code>. This points at 
-        one of two IRC servers hosted by I2P stalwarts Postman and Badger on I2P, but neither you nor they know 
-        where the other is.</li>
+        one of two IRC servers hosted on I2P by Postman and Badger, but neither you nor they know 
+        where the other is, and your ISP or government is unable to intercept your conversation!</li>
       <li class="tidylist"><b>Anonymous E-mail</b><br>Postman's I2P-based mail system can be accessed either via <a href="/susimail/">I2P's built-in webmail</a> (aka susimail) or using any mail client that supports smtp and pop3. Accounts can send and receive mail from the normal internet. For an account, visit <a href="http://hq.postman.i2p/" target="_blank">hq.postman.i2p</a>. Alternately, <a href="http://i2pbote.i2p/" target="_blank">I2P-Bote</a> is a new serverless, end-to-end encrypted e-mail system (with web interface), installable as a plugin.</li>
       <li class="tidylist"><b>Anonymous File Transfer</b><br><a href="/i2psnark" target="_blank">I2PSnark</a> is integrated into I2P, providing anonymous, encrypted bittorrent. There is also a port of e-mule to I2P called <a href="http://echelon.i2p/imule">i-mule</a>. [Urgently needs developers!]</li>
       <li class="tidylist"><b>Forums & Blogging</b><br><a href="http://syndie.i2p2.de/" target="_blank">Syndie</a> is a distributed forum and blogging plaform for I2P. [Urgently needs developers!]</li>
