--- a/installer/resources/readme/readme.html
+++ b/installer/resources/readme/readme.html
@@ -13,21 +13,21 @@
   </div>
 </div>
 <div class="welcome"><h2>Welcome to I2P!</h2></div>
-<p>If you've just started I2P, the Active: numbers on the left should start to 
+<ul class="links"><li class="tidylist">If you've just started I2P, the Active: numbers on the left should start to 
   grow over the next few minutes and you'll see a "shared clients" local destination 
-  listed at the bottom of the sidepanel on the left (if not, <a href="#trouble">see below</a>). Once green stars are indicated next to your local destinations, there are a range of services you can access including:</p> 
+  listed at the bottom of the sidepanel on the left (if not, <a href="#trouble">see below</a>). Once green stars are indicated next to your local destinations, there are a range of services you can access including:</li>
 
-<ul class="links">
-      <li class="tidylist"><b>Anonymous File Transfer</b><br><a href="/i2psnark" target="_blank">I2PSnark</a> is integrated into I2P, providing anonymous, encrypted bittorrent. There is also a port of e-mule to I2P called <a href="http://echelon.i2p/imule">i-mule</a>. [Urgently needs developers!]</li>
+
+      <li class="tidylist"><b>Anonymous File Transfer</b><br><a href="/i2psnark" target="_blank">I2PSnark</a> is integrated into I2P, providing anonymous, encrypted bittorrent. Alternately, Sponge develops an alternative bittorrent client called <a href="http://bob.i2p/Robert.html">Robert</a> written in <a href="https://secure.wikimedia.org/wikipedia/en/wiki/Python_%28programming_language%29" target="_blank">Python</a>. There is also a port of e-mule to I2P called <a href="http://echelon.i2p/imule">i-mule</a> [Urgently needs developers!], a hookup into the gnutella network, filedumps, webuploads et al.</li>
       <li class="tidylist"><b>Anonymous E-mail</b><br>Postman's I2P-based mail system can be accessed either via <a href="/susimail/">I2P's built-in webmail</a> (aka susimail) or using any mail client that supports smtp and pop3. Accounts can send and receive mail from the normal internet. For an account, visit <a href="http://hq.postman.i2p/" target="_blank">hq.postman.i2p</a>. Alternately, <a href="http://i2pbote.i2p/" target="_blank">I2P-Bote</a> is a new serverless, end-to-end encrypted e-mail system (with web interface), installable as a plugin.</li>
       <li class="tidylist"><b>Anonymous Chat</b><br>Start your IRC client (eg. chatzilla)
         and connect to the <a href="irc://127.0.0.1:6668/i2p">server</a> at <code>127.0.0.1 port 6668</code>. This points at 
         one of two IRC servers hosted on I2P by Postman and Badger, but neither you nor they know 
         where the other is, and your ISP or government is unable to intercept your conversation!</li>
-      <li class="tidylist"><b>Forums & Blogging</b><br><a href="http://syndie.i2p2.de/" target="_blank">Syndie</a> is a distributed forum and blogging plaform for I2P. [Urgently needs developers!]</li>
+      <li class="tidylist"><b>Forums & Blogging</b><br><a href="http://syndie.i2p2.de/" target="_blank">Syndie</a> is a distributed forum and blogging plaform for I2P [Urgently needs developers!]. There's also an I2P plugin port of the Java-based <a href="http://pebble.sourceforge.net/" target="_blank">pebble</a> blogging platform ported to I2P by zzz, available on <a href="http://i2plugins.i2p" target="_blank">i2plugins.i2p</a>.</li>
       <li class="tidylist"><b>Plugins for I2P</b><br>Extend the usefulness of I2P by installing plugins&hellip; you can browse the plugins and related info on <a href="http://i2plugins.i2p" target="_blank">i2plugins.i2p</a>.
-      <li class="tidylist"<b>Darknet & Public Web browsing</b><br>I2P makes anonymously hosted websites (aka eepsites) possible, and you can also access the normal web anonymously via I2P. Configure your browser to use the HTTP proxy at <code>127.0.0.1 port 4444</code>, then 
-    browse to an eepsite (anonymous, encrypted webserver run over I2P) or a normal <code>http://</code> address. Some useful resources are listed below:<br>
+      <li class="tidylist"<b>Darknet & Public Web browsing</b><br>On I2P you can host anonymous websites (aka eepsites) and other services (eg. ssh over I2p, your own irc server etc), and you can also access the normal web anonymously via I2P. Configure your browser to use the HTTP  <a href="https://secure.wikimedia.org/wikipedia/en/wiki/Proxy_server " target="_blank">proxy</a> I2P provides at <code>127.0.0.1 port 4444</code>, then 
+    browse to an eepsite or a normal <code>http://</code> address. Some useful resources are listed below:<br>
     <ul class="links">
       <li class="tidylist"><a href="http://forum.i2p/" target="_blank">forum.i2p</a>: a secure 
         and anonymous connection to <a href="http://forum.i2p2.de/" target="_blank">forum.i2p2.de</a></li>
@@ -49,26 +49,36 @@
     </ul>
     </ul>
 </ul>
-<h2>Want your own eepsite?</h2>
-<p>We've bundled some software to let you run your own eepsite - a <a href="http://jetty.mortbay.org/" target="_blank">Jetty</a> 
-  instance listening on <a href="http://127.0.0.1:7658/" target="_blank">http://127.0.0.1:7658/</a>. 
-  Simply place your files in the <code>eepsite/docroot/</code> directory (or place 
-  any standard JSP/Servlet <code>.war</code> files under <code>eepsite/webapps</code>, 
-  or standard CGI script under <code>eepsite/cgi-bin</code>) and they'll show 
-  up. After starting up an <a href="/i2ptunnel/" target="_blank">eepsite tunnel</a> pointing at 
+<h2>Your Own Anonymous Webserver</h2>
+<ul class="links">
+
+<li class="tidylist">I2P comes built-in with a ready-to-go webserver for hosting your own anonymous content: a <a href="http://jetty.mortbay.org/" target="_blank">Jetty</a> instance listening on <a href="http://127.0.0.1:7658/" target="_blank">http://127.0.0.1:7658/</a>.</li>
+    
+
+      <li class="tidylist"><b>Start your tunnel!</b><br>  
+  After starting up an <a href="/i2ptunnel/" target="_blank">eepsite tunnel</a> pointing at 
   it, your eepsite will be visible to others. Detailed instructions for starting 
   your eepsite are on <a href="http://127.0.0.1:7658/" target="_blank">your temporary eepsite 
-  page</a>. </p>
-<h2><a name="trouble">Troubleshooting</a></h2>
-<p>Be patient - I2P may be slow to start the first time as it searches for peers. 
+  page</a>.</li>
+  <li class="tidylist"> <b>Host your own content!</b><br>To host your own content
+  simply place your files in the <code>eepsite/docroot/</code> directory (or place 
+  any standard JSP/Servlet <code>.war</code> files under <code>eepsite/webapps</code>, 
+  or standard CGI script under <code>eepsite/cgi-bin</code>) and they'll show 
+  up. You can also run any alternative webserver platform over I2P and replace the built-in server, or run it on another tunnel.</li> 
+
+<h2><a name="trouble">Troubleshooting &amp; Further Assistance</a></h2>
+    <ul class="links">
+      <li class="tidylist"><b>Be patient</b><br>I2P may be slow to start the first time as it searches for peers. 
   If, after 30 minutes, your Active: connected/recent count has less than 10 connected 
-  peers, you should open I2P's port on your firewall for better connectivity. If 
+  peers, you should open I2P's port on your firewall for better connectivity.</li> 
+  <li class="tidylist"><b>Check your proxy setttings!</b><br>If 
   you cannot see any eepsites at all (even <a href="http://www.i2p2.i2p/" target="_blank">www.i2p2.i2p</a>), 
-  be sure your browser proxy is set to 127.0.0.1 port 4444. You may also want 
+  be sure your browser proxy is set to <code>127.0.0.1 port 4444</code>.</li>
+  
+  <li class="tidylist"><b>Getting support online</b><br>You may also want 
   to review the information on the <a href="http://www.i2p2.i2p/" target="_blank">I2P website</a>, 
   post up messages to the <a href="http://forum.i2p2.de/" target="_blank">I2P discussion forum</a>, 
   or swing by
   <a href="irc://127.0.0.1:6668/i2p-help">#i2p-help</a>, <a href="irc://127.0.0.1:6668/i2p">#i2p</a> or <a href="irc://127.0.0.1:6668/i2p-chat">#i2p-chat</a>
   on IRC at <a href="irc://irc.freenode.net/#i2p">irc.freenode.net</a>, 
   irc.postman.i2p or irc.freshcoffee.i2p (they're linked together).</p>
-<hr>
