Readme (eng): more textual finessing.
Monotone-Parent: 5e467b778ad80d25bbcb335211da8111a2af64da
Monotone-Revision: d9a36871d2f63b552f6152fb7ef49756ac480f00

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2010-11-26T08:26:45
Monotone-Branch: i2p.i2p

--- a/installer/resources/readme/readme.html
+++ b/installer/resources/readme/readme.html
@@ -49,18 +49,17 @@
     </ul>
     </ul>
 </ul>
-<h2>Your Own Anonymous Webserver</h2>
+<h2>Anonymous Encrypted Webserving</h2>
 <ul class="links">
 
-<li class="tidylist">I2P comes built-in with a ready-to-go webserver for hosting your own anonymous content: a <a href="http://jetty.mortbay.org/" target="_blank">Jetty</a> instance listening on <a href="http://127.0.0.1:7658/" target="_blank">http://127.0.0.1:7658/</a>.</li>
+<li class="tidylist"><b>Ready to roll!</b><br>I2P comes built-in with a ready-to-go webserver for hosting your own anonymous website (eepsite) on the I2P darknet: a <a href="http://jetty.mortbay.org/" target="_blank">Jetty</a> instance listening on <a href="http://127.0.0.1:7658/" target="_blank">http://127.0.0.1:7658/</a>.</li>
     
 
-      <li class="tidylist"><b>Start your tunnel!</b><br>  
-  After starting up an <a href="/i2ptunnel/" target="_blank">eepsite tunnel</a> pointing at 
-  it, your eepsite will be visible to others. Detailed instructions for starting 
-  your eepsite are on <a href="http://127.0.0.1:7658/" target="_blank">your temporary eepsite 
-  page</a>.</li>
-  <li class="tidylist"> <b>Host your own content!</b><br>To host your own content
+      <li class="tidylist"><b>Start your tunnel</b><br>  
+  After starting up your pre-configured <a href="/i2ptunnel/" target="_blank">I2P Webserver tunnel</a>,  
+your eepsite will be visible to others. Detailed instructions for starting 
+  your eepsite are on <a href="http://127.0.0.1:7658/help/" target="_blank">eepsite quickstart guide</a>.</li>
+  <li class="tidylist"> <b>Host your own content</b><br>To host your own content
   simply place your files in the <code>eepsite/docroot/</code> directory (or place 
   any standard JSP/Servlet <code>.war</code> files under <code>eepsite/webapps</code>, 
   or standard CGI script under <code>eepsite/cgi-bin</code>) and they'll show 
@@ -71,7 +70,7 @@
       <li class="tidylist"><b>Be patient</b><br>I2P may be slow to start the first time as it searches for peers. 
   If, after 30 minutes, your Active: connected/recent count has less than 10 connected 
   peers, you should open I2P's port on your firewall for better connectivity.</li> 
-  <li class="tidylist"><b>Check your proxy setttings!</b><br>If 
+  <li class="tidylist"><b>Check your proxy setttings</b><br>If 
   you cannot see any eepsites at all (even <a href="http://www.i2p2.i2p/" target="_blank">www.i2p2.i2p</a>), 
   be sure your browser proxy is set to <code>127.0.0.1 port 4444</code>.</li>
   
