Readme (eng): More finessing.
Monotone-Parent: cad75d73bf8fab9567ef5be1823c8fdca8a2282e
Monotone-Revision: 4aa245e95bf232ad90b57826e92392ae3e90324c

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2010-11-26T09:26:49
Monotone-Branch: i2p.i2p

--- a/installer/resources/readme/readme.html
+++ b/installer/resources/readme/readme.html
@@ -29,21 +29,21 @@
       <li class="tidylist"<b>I2P Darknet & Public Web browsing</b><br>On I2P you can host anonymous websites (aka eepsites) and other services (eg. ssh over I2p, your own irc server etc), and you can also access the normal web anonymously via I2P. Configure your browser to use the HTTP  <a href="https://secure.wikimedia.org/wikipedia/en/wiki/Proxy_server " target="_blank">proxy</a> I2P provides at <code>127.0.0.1 port 4444</code>, then 
     browse to an eepsite or a normal <code>http://</code> address. Some useful resources are listed below:<br>
     <ul class="links">
-      <li class="tidylist"><a href="http://forum.i2p/" target="_blank">forum.i2p</a>: a secure 
-        and anonymous connection to <a href="http://forum.i2p2.de/" target="_blank">forum.i2p2.de</a></li>
-      <li class="tidylist"><a href="http://www.i2p2.i2p/" target="_blank">www.i2p2.i2p</a> and 
+      <li class="tidylist"><b>I2P Community Forum</b><br><a href="http://forum.i2p/" target="_blank">forum.i2p</a>: a secure 
+        and anonymous connection to <a href="http://forum.i2p2.de/" target="_blank">forum.i2p2.de</a>,  an online forum community where developers and users alike discuss problems and ideas relating to I2P and associated interests.</li>
+      <li class="tidylist"><b>I2P Website</b><br><a href="http://www.i2p2.i2p/" target="_blank">www.i2p2.i2p</a> and 
         mirror <a href="http://i2p-projekt.i2p" target="_blank">i2p-projekt.i2p</a>: secure and 
-        anonymous connections to <a href="http://www.i2p2.de/" target="_blank">www.i2p2.de</a></li>
-      <li class="tidylist"><a href="http://eepsites.i2p/" target="_blank">eepsites.i2p</a>: an 
-        anonymously hosted search engine of eepsites</li>
-      <li class="tidylist"><a href="http://ugha.i2p/" target="_blank">ugha.i2p</a>: ugha's eepsite, 
-        a wiki that anyone can edit, and lots of links</li>
-      <li class="tidylist"><a href="http://fproxy.tino.i2p" target="_blank">fproxy.tino.i2p</a>: 
-        Freenet proxy</li>
-      <li class="tidylist"><a href="http://echelon.i2p" target="_blank">echelon.i2p</a>: software 
+        anonymous connections to <a href="http://www.i2p2.de/" target="_blank">www.i2p2.de</a>.</li>
+      <li class="tidylist"><b>Eepsite Search Engine</b><br><a href="http://eepsites.i2p/" target="_blank">eepsites.i2p</a>: an 
+        anonymously hosted search engine of eepsites.</li>
+      <li class="tidylist"><b>I2P Commnity Wiki</b><br><a href="http://ugha.i2p/" target="_blank">ugha.i2p</a>: ugha's eepsite, 
+        a wiki that anyone can edit, and lots of links.</li>
+      <li class="tidylist"><b>I2P to Freenet Proxy</b><br><a href="http://fproxy.tino.i2p" target="_blank">fproxy.tino.i2p</a>: 
+        Peer into the filesharing world of the <a href="http://freenetproject.org/" target="_blank">Freenet</a> darknet with Tino's I2P to Freenet proxy.</li>
+      <li class="tidylist"><b>Echelon's I2P Resources</b><br><a href="http://echelon.i2p" target="_blank">echelon.i2p</a>: software 
         archive (I2PFox, iMule, I2P-Messenger etc) and information about I2P including a beginner's guide.</li>
-      <li class="tidylist"><a href="http://paste.i2p2.i2p" target="_blank">paste.i2p2.i2p</a>: secure and 
-        anonymous paste service.</li>
+      <li class="tidylist"><b>I2P Pastebin</b><br><a href="http://paste.i2p2.i2p" target="_blank">paste.i2p2.i2p</a>: secure and 
+        anonymous paste service allowing anonymous text-based documentation and code sharing over I2P.</li>
       <li class="tidylist">There are many more eepsites - just follow the links from the ones you see, 
       bookmark your favorites, and visit them often! </li>
     </ul>
